# swagger_output.json
@@ -893,11 +893,14 @@
     "/authorization/": {
       "get": {
         "tags": [],
-        "description": "",
+        "description": "Provides whole data from userschema collection. Outputs it as a array in the body.",
         "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -905,8 +908,13 @@
     "/authorization/login": {
       "post": {
         "tags": [],
-        "description": "",
+        "description": "Enable created user to login into the page. Returning JWT token.",
         "parameters": [
+          {
+            "name": "login",
+            "in": "query",
+            "type": "string"
+          },
           {
             "name": "password",
             "in": "query",
@@ -917,6 +925,9 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
             "description": "Unauthorized"
           }
@@ -926,11 +937,45 @@
     "/authorization/register": {
       "post": {
         "tags": [],
-        "description": "",
-        "parameters": [],
+        "description": "Enable to create accounts in our application.",
+        "parameters": [
+          {
+            "name": "firstName",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "lastName",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "email",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "login",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "password",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "role",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description":"Bad Request"
           }
         }
       }
